# faa-registry-etl

./: .gitignore  README.md  main.py  pyproject.toml
configs/: filters.yaml
src/faa_etl/: pipeline.py
